Slowly adding details, try .bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,349 @@
----
----
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{donat-magnin_interannual_2020,
+	title = {Interannual variability of summer surface mass balance and surface melting in the {Amundsen} sector, {West} {Antarctica}},
+	volume = {14},
+	issn = {1994-0424},
+	url = {https://tc.copernicus.org/articles/14/229/2020/},
+	doi = {10.5194/tc-14-229-2020},
+	abstract = {Abstract. Understanding the interannual variability of surface mass balance (SMB) and surface melting in Antarctica is key to quantify the signal-to-noise ratio in climate trends, identify opportunities for multi-year climate predictions and assess the ability of climate models to respond to climate variability. Here we simulate summer SMB and surface melting from 1979 to 2017 using the Regional Atmosphere Model (MAR) at 10 km resolution over the drainage basins of the Amundsen Sea glaciers in West Antarctica. Our simulations reproduce the mean present-day climate in terms of near-surface temperature (mean overestimation of 0.10 ∘C), near-surface wind speed (mean underestimation of 0.42 m s−1), and SMB (relative bias {\textless}20 \% over Thwaites glacier). The simulated interannual variability of SMB and melting is also close to observation-based estimates. For all the Amundsen glacial drainage basins, the interannual variability of summer SMB and surface melting is driven by two distinct mechanisms: high summer SMB tends to occur when the Amundsen Sea Low (ASL) is shifted southward and westward, while high summer melt rates tend to occur when ASL is shallower (i.e. anticyclonic anomaly). Both mechanisms create a northerly flow anomaly that increases moisture convergence and cloud cover over the Amundsen Sea and therefore favors snowfall and downward longwave radiation over the ice sheet. The part of interannual summer SMB variance explained by the ASL longitudinal migrations increases westward and reaches 40 \% for Getz. Interannual variation in the ASL relative central pressure is the largest driver of melt rate variability, with 11 \% to 21 \% of explained variance (increasing westward). While high summer SMB and melt rates are both favored by positive phases of El Niño–Southern Oscillation (ENSO), the Southern Oscillation Index (SOI) only explains 5 \% to 16 \% of SMB or melt rate interannual variance in our simulations, with moderate statistical significance. However, the part explained by SOI in the previous austral winter is greater, suggesting that at least a part of the ENSO–SMB and ENSO–melt relationships in summer is inherited from the previous austral winter. Possible mechanisms involve sea ice advection from the Ross Sea and intrusions of circumpolar deep water combined with melt-induced ocean overturning circulation in ice shelf cavities. Finally, we do not find any correlation with the Southern Annular Mode (SAM) in summer.},
+	language = {en},
+	number = {1},
+	urldate = {2020-08-06},
+	journal = {The Cryosphere},
+	author = {Donat-Magnin, Marion and Jourdain, Nicolas C. and Gallée, Hubert and Amory, Charles and Kittel, Christoph and Fettweis, Xavier and Wille, Jonathan D. and Favier, Vincent and Drira, Amine and Agosta, Cécile},
+	month = jan,
+	year = {2020},
+	pages = {229--249},
+	file = {Full Text:/Users/jwille/Zotero/storage/X2XMJIZZ/Donat-Magnin et al. - 2020 - Interannual variability of summer surface mass bal.pdf:application/pdf},
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@article{nicolas_january_2017,
+	title = {January 2016 extensive summer melt in {West} {Antarctica} favoured by strong {El} {Niño}},
+	volume = {8},
+	issn = {2041-1723},
+	url = {http://www.nature.com/doifinder/10.1038/ncomms15799},
+	doi = {10.1038/ncomms15799},
+	urldate = {2017-10-18},
+	journal = {Nature Communications},
+	author = {Nicolas, Julien P. and Vogelmann, Andrew M. and Scott, Ryan C. and Wilson, Aaron B. and Cadeddu, Maria P. and Bromwich, David H. and Verlinde, Johannes and Lubin, Dan and Russell, Lynn M. and Jenkinson, Colin and Powers, Heath H. and Ryczek, Maciej and Stone, Gregory and Wille, Jonathan D.},
+	month = jun,
+	year = {2017},
+	pages = {15799},
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
+@article{wille_evaluation_2016,
+	title = {Evaluation of the {AMPS} {Boundary} {Layer} {Simulations} on the {Ross} {Ice} {Shelf} with {Tower} {Observations}},
+	volume = {55},
+	url = {https://journals.ametsoc.org/view/journals/apme/55/11/jamc-d-16-0032.1.xml},
+	doi = {10.1175/JAMC-D-16-0032.1},
+	number = {11},
+	journal = {Journal of Applied Meteorology and Climatology},
+	author = {Wille, Jonathan D. and Bromwich, David H. and Nigro, Melissa A. and Cassano, John J. and Mateling, Marian and Lazzara, Matthew A. and Wang, Sheng-Hung},
+	year = {2016},
+	note = {Place: Boston MA, USA
+Publisher: American Meteorological Society},
+	pages = {2349 -- 2367},
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{favier_les_2022,
+	title = {Les rivières atmosphériques de l'{Antarctique}},
+	issn = {0026-1181},
+	url = {https://lameteorologie.fr/issues/2022/117/meteo_2022_117_19},
+	doi = {10.37053/lameteorologie-2022-0032},
+	abstract = {Sur une grande partie de l'Antarctique, le bilan de masse (c'est-à-dire de neige) de surface est dominé par quelques événements de précipitations extrêmes. Ces événements dépendent d'intrusions de masses d'air très humide associées à des phénomènes dénommés rivières atmosphériques en provenance de l'océan Austral. Ces rivières atmosphériques influencent fortement le climat ; pourtant, les caractéristiques, les mécanismes et les impacts associés restent mal connus en Antarctique. Nous résumons ici l'état des connaissances sur la mise en place de ces événements extrêmes et leurs impacts à la fois sur l'accumulation de neige, le réchauffement et la fonte en surface de la calotte.
+            Over much of Antarctica, the surface mass balance (i.e. the resultant of snow fluxes at the surface of the ice sheet) is dominated by a few extreme precipitation events. It has recently been shown that these events are linked to intrusions of highly humid air masses related with atmospheric rivers traversing the Southern Ocean. These atmospheric rivers strongly influence the climate, yet their meteorological characterization and associated impacts remain poorly understood in Antarctica. We summarize here the latest research regarding the development of these extreme events and their impacts on snow accumulation, warming, and surface melt on the Antarctic ice sheet.},
+	language = {en},
+	number = {117},
+	urldate = {2022-10-05},
+	journal = {La Météorologie},
+	author = {Favier, Vincent and Wille, Jonathan and Agosta, Cécile and Amory, Charles and Barthélémy, Léonard and Codron, Francis and Fourré, Élise and Gorodetskaya, Irina and Krinner, Gerhard and Pohl, Benjamin},
+	year = {2022},
+	pages = {019},
+	file = {Submitted Version:/Users/jwille/Zotero/storage/28DBGXAU/Favier et al. - 2022 - Les rivières atmosphériques de l'Antarctique.pdf:application/pdf},
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{clem_antarctica_2022,
+	title = {Antarctica and the {Southern} {Ocean}},
+	volume = {103},
+	url = {https://journals.ametsoc.org/view/journals/bams/103/8/BAMS-D-22-0078.1.xml},
+	doi = {10.1175/BAMS-D-22-0078.1},
+	number = {8},
+	journal = {Bulletin of the American Meteorological Society},
+	author = {Clem, Kyle R. and Raphael, Marilyn N. and Adusumilli, Susheel and Baiman, Rebecca and Banwell, Alison F. and Barreira, Sandra and Beadling, Rebecca L. and Colwell, Steve and Coy, Lawrence and Datta, Rajashree T. and Laat, Jos De and Dunmire, Devon and Fogt, Ryan L. and Freeman, Natalie M. and Fricker, Helen Amanda and Gardner, Alex S. and Johnson, Bryan and Keller, Linda M. and Kramarova, Natalya A. and Lazzara, Matthew A. and Lieser, Jan L. and MacFerrin, Michael and MacGilchrist, Graeme A. and MacLennan, Michelle L. and Massom, Robert A. and Mazloff, Matthew R. and Mote, Thomas L. and Nash, Eric R. and Newman, Paul A. and Norton, Taylor and Petropavlovskikh, Irina and Pitts, Michael and Reid, Phillip and Santee, Michelle L. and Scambos, Ted A. and Shi, Jia-Rui and Stammerjohn, Sharon and Strahan, Susan E. and Thompson, Andrew F. and Wille, Jonathan D. and Wilson, Earle},
+	year = {2022},
+	note = {Place: Boston MA, USA
+Publisher: American Meteorological Society},
+	pages = {S307 -- S340},
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{maclennan_contribution_2022,
+	title = {Contribution of {Atmospheric} {Rivers} to {Antarctic} {Precipitation}},
+	volume = {49},
+	issn = {0094-8276},
+	url = {https://doi.org/10.1029/2022GL100585},
+	doi = {10.1029/2022GL100585},
+	abstract = {Abstract Atmospheric rivers (ARs) are efficient mechanisms for transporting atmospheric moisture from low latitudes to the Antarctic Ice Sheet (AIS). While AR events occur infrequently, they can lead to extreme precipitation and surface melt events on the AIS. Here we estimate the contribution of ARs to total Antarctic precipitation, by combining precipitation from atmospheric reanalyses and a polar-specific AR detection algorithm. We show that ARs contribute substantially to Antarctic precipitation, especially in East Antarctica at elevations below 3,000 m. ARs contribute substantially to year-to-year variability in Antarctic precipitation. Our results highlight that ARs are an important component for understanding present and future Antarctic mass balance trends and variability.},
+	number = {18},
+	urldate = {2022-09-26},
+	journal = {Geophysical Research Letters},
+	author = {Maclennan, Michelle L. and Lenaerts, Jan T. M. and Shields, Christine and Wille, Jonathan D.},
+	month = sep,
+	year = {2022},
+	note = {Publisher: John Wiley \& Sons, Ltd},
+	keywords = {Antarctica, atmospheric rivers, detection, ice sheet mass balance, precipitation, surface mass balance},
+	pages = {e2022GL100585},
+	annote = {https://doi.org/10.1029/2022GL100585},
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+@article{verfaillie_circum-antarctic_2022,
+	title = {The circum-{Antarctic} ice-shelves respond to a more positive {Southern} {Annular} {Mode} with regionally varied melting},
+	volume = {3},
+	issn = {2662-4435},
+	url = {https://doi.org/10.1038/s43247-022-00458-x},
+	doi = {10.1038/s43247-022-00458-x},
+	abstract = {The Southern Hemisphere cryosphere has recently shown regionally-contrasted responses to climate change, in particular to the positive phases of the Southern Annular Mode. However, the understanding of the impacts of this mode on ice-shelf basal melt at a circum-Antarctic scale is still limited. Here, we performed idealized experiments with a pan-Antarctic regional ice-shelf cavity-resolving ocean—sea-ice model for different phases of the Southern Annular Mode. We show that positive phases lead to increased upwelling and subsurface ocean temperature and salinity close to ice shelves, while the opposite occurs for negative phases. A one-standard-deviation increase of the Southern Annular Mode leads to a net basal mass loss of 40 Gt yr−1, with strong regional contrasts: increased ice-shelf basal melt in the Bellingshausen and Western Pacific sectors and the opposite response in the Amundsen sector. Estimates of 1000–1200 and 2090–2100 ice-shelf basal melt changes due to the Southern Annular Mode are −86.6 Gt yr−1 and 55.0 to 164.9 Gt yr−1, respectively, compared to the present.},
+	number = {1},
+	journal = {Communications Earth \& Environment},
+	author = {Verfaillie, Deborah and Pelletier, Charles and Goosse, Hugues and Jourdain, Nicolas C. and Bull, Christopher Y. S. and Dalaiden, Quentin and Favier, Vincent and Fichefet, Thierry and Wille, Jonathan D.},
+	month = jun,
+	year = {2022},
+	pages = {139},
+}
+
+@article{collow_overview_2022,
+	title = {An {Overview} of {ARTMIP}'s {Tier} 2 {Reanalysis} {Intercomparison}: {Uncertainty} in the {Detection} of {Atmospheric} {Rivers} and {Their} {Associated} {Precipitation}},
+	volume = {127},
+	issn = {2169-897X},
+	url = {https://doi.org/10.1029/2021JD036155},
+	doi = {10.1029/2021JD036155},
+	abstract = {Abstract Atmospheric rivers, or long but narrow regions of enhanced water vapor transport, are an important component of the hydrologic cycle as they are responsible for much of the poleward transport of water vapor and result in precipitation, sometimes extreme in intensity. Despite their importance, much uncertainty remains in the detection of atmospheric rivers in large datasets such as reanalyses and century scale climate simulations. To understand this uncertainty, the Atmospheric River Tracking Method Intercomparison Project (ARTMIP) developed tiered experiments, including the Tier 2 Reanalysis Intercomparison that is presented here. Eleven detection algorithms submitted hourly tags--binary fields indicating the presence or absence of atmospheric rivers--of detected atmospheric rivers in the Modern Era Retrospective Analysis for Research and Applications, version 2 (MERRA-2) and European Centre for Medium-Range Weather Forecasts' Reanalysis Version 5 (ERA5) as well as six-hourly tags in the Japanese 55-year Reanalysis (JRA-55). Due to a higher climatological mean for integrated water vapor transport in MERRA-2, atmospheric rivers were detected more frequently relative to the other two reanalyses, particularly in algorithms that use a fixed threshold for water vapor transport. The finer horizontal resolution of ERA5 resulted in narrower atmospheric rivers and an ability to detect atmospheric rivers along resolved coastlines. The fraction of hemispheric area covered by ARs varies throughout the year in all three reanalyses, with different atmospheric river detection tools having different seasonal cycles.},
+	number = {8},
+	urldate = {2022-04-19},
+	journal = {Journal of Geophysical Research: Atmospheres},
+	author = {Collow, A. B. Marquardt and Shields, C. A. and Guan, B. and Kim, S. and Lora, J. M. and McClenny, E. E. and Nardi, K. and Payne, A. and Reid, K. and Shearer, E. J. and Tomé, R. and Wille, J. D. and Ramos, A. M. and Gorodetskaya, I. V. and Leung, L. R. and O’Brien, T. A. and Ralph, F. M. and Rutz, J. and Ullrich, P. A. and Wehner, M.},
+	month = apr,
+	year = {2022},
+	note = {Publisher: John Wiley \& Sons, Ltd},
+	keywords = {atmospheric river, ERA5, JRA-55, MERRA-2, reanalysis intercomparison},
+	pages = {e2021JD036155},
+	annote = {https://doi.org/10.1029/2021JD036155},
+}
+
+@article{wille_intense_2022,
+	title = {Intense atmospheric rivers can weaken ice shelf stability at the {Antarctic} {Peninsula}},
+	volume = {3},
+	issn = {2662-4435},
+	url = {https://doi.org/10.1038/s43247-022-00422-9},
+	doi = {10.1038/s43247-022-00422-9},
+	abstract = {The disintegration of the ice shelves along the Antarctic Peninsula have spurred much discussion on the various processes leading to their eventual dramatic collapse, but without a consensus on an atmospheric forcing that could connect these processes. Here, using an atmospheric river detection algorithm along with a regional climate model and satellite observations, we show that the most intense atmospheric rivers induce extremes in temperature, surface melt, sea-ice disintegration, or large swells that destabilize the ice shelves with 40\% probability. This was observed during the collapses of the Larsen A and B ice shelves during the summers of 1995 and 2002 respectively. Overall, 60\% of calving events from 2000–2020 were triggered by atmospheric rivers. The loss of the buttressing effect from these ice shelves leads to further continental ice loss and subsequent sea-level rise. Under future warming projections, the Larsen C ice shelf will be at-risk from the same processes.},
+	number = {1},
+	journal = {Communications Earth \& Environment},
+	author = {Wille, Jonathan D. and Favier, Vincent and Jourdain, Nicolas C. and Kittel, Christoph and Turton, Jenny V. and Agosta, Cécile and Gorodetskaya, Irina V. and Picard, Ghislain and Codron, Francis and Santos, Christophe Leroy-Dos and Amory, Charles and Fettweis, Xavier and Blanchet, Juliette and Jomelli, Vincent and Berchet, Antoine},
+	month = apr,
+	year = {2022},
+	pages = {90},
+}
+
+@article{turner_extreme_2022,
+	title = {An {Extreme} {High} {Temperature} {Event} in {Coastal} {East} {Antarctica} {Associated} {With} an {Atmospheric} {River} and {Record} {Summer} {Downslope} {Winds}},
+	volume = {49},
+	url = {https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/2021GL097108},
+	doi = {https://doi.org/10.1029/2021GL097108},
+	abstract = {Abstract High surface temperatures are important in Antarctica because of their role in ice melt and sea level rise. We investigate a high temperature event in December 1989 that gave record temperatures in coastal East Antarctica between 60° and 100°E. The high temperatures were associated with a pool of warm lower tropospheric air with December temperature anomalies of {\textgreater}14°C that developed in two stages over the Amery Ice Shelf. First, there was near-record poleward warm advection within an atmospheric river. Second, synoptically driven downslope flow from the interior reached unprecedented December strength over a large area, leading to strong descent and further warming in the coastal region. The coastal easterly winds were unusually deep and strong, and the warm pool was advected westwards, giving a short period of high temperatures at coastal locations, including a surface temperature of 9.3°C at Mawson, the second highest in its 66-year record.},
+	number = {4},
+	journal = {Geophysical Research Letters},
+	author = {Turner, John and Lu, Hua and King, John C. and Carpentier, Scott and Lazzara, Matthew and Phillips, Tony and Wille, Jonathan},
+	year = {2022},
+	note = {\_eprint: https://agupubs.onlinelibrary.wiley.com/doi/pdf/10.1029/2021GL097108},
+	keywords = {Antarctica, atmospheric river, extreme event, high temperatures},
+	pages = {e2021GL097108},
+	annote = {e2021GL097108 2021GL097108},
+}
+
+@article{nigro_self-organizing-map-based_2017,
+	title = {A {Self}-{Organizing}-{Map}-{Based} {Evaluation} of the {Antarctic} {Mesoscale} {Prediction} {System} {Using} {Observations} from a 30-m {Instrumented} {Tower} on the {Ross} {Ice} {Shelf}, {Antarctica}},
+	volume = {32},
+	url = {https://journals.ametsoc.org/view/journals/wefo/32/1/waf-d-16-0084_1.xml},
+	doi = {10.1175/WAF-D-16-0084.1},
+	number = {1},
+	journal = {Weather and Forecasting},
+	author = {Nigro, Melissa A. and Cassano, John J. and Wille, Jonathan and Bromwich, David H. and Lazzara, Matthew A.},
+	year = {2017},
+	note = {Place: Boston MA, USA
+Publisher: American Meteorological Society},
+	pages = {223 -- 242},
+}
+
+@article{crockart_ninosouthern_2021,
+	title = {El {Niño}–{Southern} {Oscillation} signal in a new {East} {Antarctic} ice core, {Mount} {Brown} {South}},
+	volume = {17},
+	url = {https://cp.copernicus.org/articles/17/1795/2021/},
+	doi = {10.5194/cp-17-1795-2021},
+	number = {5},
+	journal = {Climate of the Past},
+	author = {Crockart, C. K. and Vance, T. R. and Fraser, A. D. and Abram, N. J. and Criscitiello, A. S. and Curran, M. A. J. and Favier, V. and Gallant, A. J. E. and Kittel, C. and Kjær, H. A. and Klekociuk, A. R. and Jong, L. M. and Moy, A. D. and Plummer, C. T. and Vallelonga, P. T. and Wille, J. and Zhang, L.},
+	year = {2021},
+	pages = {1795--1818},
+}
+
+@article{wille_antarctic_2021,
+	title = {Antarctic {Atmospheric} {River} {Climatology} and {Precipitation} {Impacts}},
+	volume = {126},
+	url = {https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/2020JD033788},
+	doi = {https://doi.org/10.1029/2020JD033788},
+	abstract = {Abstract The Antarctic ice sheet (AIS) is sensitive to short-term extreme meteorological events that can leave long-term impacts on the continent's surface mass balance (SMB). We investigate the impacts of atmospheric rivers (ARs) on the AIS precipitation budget using an AR detection algorithm and a regional climate model (Modèle Atmosphérique Régional) from 1980 to 2018. While ARs and their associated extreme vapor transport are relatively rare events over Antarctic coastal regions (∼3 days per year), they have a significant impact on the precipitation climatology. ARs are responsible for at least 10\% of total accumulated snowfall across East Antarctica (localized areas reaching 20\%) and a majority of extreme precipitation events. Trends in AR annual frequency since 1980 are observed across parts of AIS, most notably an increasing trend in Dronning Maud Land; however, interannual variability in AR frequency is much larger. This AR behavior appears to drive a significant portion of annual snowfall trends across East Antarctica, while controlling the interannual variability of precipitation across most of the AIS. AR landfalls are most likely when the circumpolar jet is highly amplified during blocking conditions in the Southern Ocean. There is a fingerprint of the Southern Annular Mode (SAM) on AR variability in West Antarctica with SAM+ (SAM−) favoring increased AR frequency in the Antarctic Peninsula (Amundsen-Ross Sea coastline). Given the relatively large influence ARs have on precipitation across the continent, it is advantageous for future studies of moisture transport to Antarctica to consider an AR framework especially when considering future SMB changes.},
+	number = {8},
+	journal = {Journal of Geophysical Research: Atmospheres},
+	author = {Wille, Jonathan D. and Favier, Vincent and Gorodetskaya, Irina V. and Agosta, Cécile and Kittel, Christoph and Beeman, Jai Chowdhry and Jourdain, Nicolas C. and Lenaerts, Jan T. M. and Codron, Francis},
+	year = {2021},
+	note = {\_eprint: https://agupubs.onlinelibrary.wiley.com/doi/pdf/10.1029/2020JD033788},
+	keywords = {Antarctica, atmospheric rivers, climatology, meteorology},
+	pages = {e2020JD033788},
+	annote = {e2020JD033788 2020JD033788},
+}
+
+@article{wille_evaluation_2017,
+	title = {Evaluation of the {AMPS} {Boundary} {Layer} {Simulations} on the {Ross} {Ice} {Shelf}, {Antarctica}, with {Unmanned} {Aircraft} {Observations}},
+	volume = {56},
+	issn = {1558-8424},
+	url = {https://doi.org/10.1175/JAMC-D-16-0339.1},
+	doi = {10.1175/JAMC-D-16-0339.1},
+	abstract = {Accurately predicting moisture and stability in the Antarctic planetary boundary layer (PBL) is essential for low-cloud forecasts, especially when Antarctic forecasters often use relative humidity as a proxy for cloud cover. These forecasters typically rely on the Antarctic Mesoscale Prediction System (AMPS) Polar Weather Research and Forecasting (Polar WRF) Model for high-resolution forecasts. To complement the PBL observations from the 30-m Alexander Tall Tower! (ATT) on the Ross Ice Shelf as discussed in a recent paper by Wille and coworkers, a field campaign was conducted at the ATT site from 13 to 26 January 2014 using Small Unmanned Meteorological Observer (SUMO) aerial systems to collect PBL data. The 3-km-resolution AMPS forecast output is combined with the global European Centre for Medium-Range Weather Forecasts interim reanalysis (ERAI), SUMO flights, and ATT data to describe atmospheric conditions on the Ross Ice Shelf. The SUMO comparison showed that AMPS had an average 2–3 m s−1 high wind speed bias from the near surface to 600 m, which led to excessive mechanical mixing and reduced stability in the PBL. As discussed in previous Polar WRF studies, the Mellor–Yamada–Janjić PBL scheme is likely responsible for the high wind speed bias. The SUMO comparison also showed a near-surface 10–15-percentage-point dry relative humidity bias in AMPS that increased to a 25–30-percentage-point deficit from 200 to 400 m above the surface. A large dry bias at these critical heights for aircraft operations implies poor AMPS low-cloud forecasts. The ERAI showed that the katabatic flow from the Transantarctic Mountains is unrealistically dry in AMPS.},
+	number = {8},
+	urldate = {2020-11-23},
+	journal = {Journal of Applied Meteorology and Climatology},
+	author = {Wille, Jonathan D. and Bromwich, David H. and Cassano, John J. and Nigro, Melissa A. and Mateling, Marian E. and Lazzara, Matthew A.},
+	month = aug,
+	year = {2017},
+	pages = {2239--2258},
+}
+
+@article{wille_west_2019,
+	title = {West {Antarctic} surface melt triggered by atmospheric rivers},
+	volume = {12},
+	issn = {1752-0894, 1752-0908},
+	url = {http://www.nature.com/articles/s41561-019-0460-1},
+	doi = {10.1038/s41561-019-0460-1},
+	language = {en},
+	number = {11},
+	urldate = {2019-11-04},
+	journal = {Nature Geoscience},
+	author = {Wille, Jonathan D. and Favier, Vincent and Dufour, Ambroise and Gorodetskaya, Irina V. and Turner, John and Agosta, Cécile and Codron, Francis},
+	month = nov,
+	year = {2019},
+	pages = {911--916},
+}
+
+@article{turner_dominant_2019,
+	title = {The {Dominant} {Role} of {Extreme} {Precipitation} {Events} in {Antarctic} {Snowfall} {Variability}},
+	issn = {0094-8276, 1944-8007},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1029/2018GL081517},
+	doi = {10.1029/2018GL081517},
+	language = {en},
+	urldate = {2019-03-25},
+	journal = {Geophysical Research Letters},
+	author = {Turner, John and Phillips, Tony and Thamban, Meloth and Rahaman, Waliur and Marshall, Gareth J. and Wille, Jonathan D. and Favier, Vincent and Winton, V. Holly L. and Thomas, Elizabeth and Wang, Zaomin and Broeke, Michiel and Hosking, J. Scott and Lachlan‐Cope, Tom},
+	month = mar,
+	year = {2019},
+}
+
+@article{pohl_relationship_2021,
+	title = {Relationship {Between} {Weather} {Regimes} and {Atmospheric} {Rivers} in {East} {Antarctica}},
+	volume = {126},
+	issn = {2169-897X},
+	url = {https://doi.org/10.1029/2021JD035294},
+	doi = {10.1029/2021JD035294},
+	abstract = {Abstract Here, we define weather regimes in the East Antarctica?Southern Ocean sector based on daily anomalies of 700 hPa geopotential height derived from ERA5 reanalysis during 1979?2018. Most regimes and their preferred transitions depict synoptic-scale disturbances propagating eastwards off the Antarctic coastline. While regime sequences are generally short, their interannual variability is strongly driven by the polarity of the Southern Annular Mode (SAM). Regime occurrences are then intersected with atmospheric rivers (ARs) detected over the same region and period. ARs are equiprobable throughout the year, but clearly concentrate during regimes associated with a strong atmospheric ridges/blockings on the eastern part of the domain, which act to channel meridional advection of heat and moisture from the lower latitudes towards Antarctica. Both regimes and ARs significantly shape climate variability in Antarctica. Regimes favorable to AR occurrences are associated with anomalously warm and humid conditions in coastal Antarctica and, to a lesser extent, the hinterland parts of the Antarctic plateau. These anomalies are strongly enhanced during AR events, with warmer anomalies and dramatically amplified snowfall amounts. Large-scale conditions favoring AR development are finally explored. They show weak dependency to the SAM, but particularly strong atmospheric ridges/blockings over the Southern Ocean appear as the most favorable pattern, in which ARs can be embedded, and to which they contribute.},
+	number = {24},
+	urldate = {2022-10-17},
+	journal = {Journal of Geophysical Research: Atmospheres},
+	author = {Pohl, Benjamin and Favier, Vincent and Wille, Jonathan and Udy, Danielle G and Vance, Tessa R and Pergaud, Julien and Dutrievoz, Niels and Blanchet, Juliette and Kittel, Christoph and Amory, Charles and Krinner, Gerhard and Codron, Francis},
+	month = dec,
+	year = {2021},
+	note = {Publisher: John Wiley \& Sons, Ltd},
+	keywords = {atmospheric rivers, East Antarctica, snowfall amounts, temperature anomalies, weather regimes},
+	pages = {e2021JD035294},
+	annote = {https://doi.org/10.1029/2021JD035294},
+}
+
+@article{mattingly_increasing_2023,
+	title = {Increasing extreme melt in northeast {Greenland} linked to foehn winds and atmospheric rivers},
+	volume = {14},
+	issn = {2041-1723},
+	url = {https://doi.org/10.1038/s41467-023-37434-8},
+	doi = {10.1038/s41467-023-37434-8},
+	abstract = {The Greenland Ice Sheet has been losing mass at an increased rate in recent decades. In northeast Greenland, increasing surface melt has accompanied speed-ups in the outlet glaciers of the Northeast Greenland Ice Stream, which contain over one meter of sea level rise potential. Here we show that the most intense northeast Greenland melt events are driven by atmospheric rivers (ARs) affecting northwest Greenland that induce foehn winds in the northeast. Near low-elevation outlet glaciers, 80–100\% of extreme ({\textgreater} 99th percentile) melt occurs during foehn conditions and 50–75\% during ARs. These events have become more frequent during the twenty-first century, with 5–10\% of total northeast Greenland melt in several recent summers occurring during the {\textasciitilde}1\% of times with strong AR and foehn conditions. We conclude that the combined AR-foehn influence on northeast Greenland extreme melt will likely continue to grow as regional atmospheric moisture content increases with climate warming.},
+	number = {1},
+	journal = {Nature Communications},
+	author = {Mattingly, Kyle S. and Turton, Jenny V. and Wille, Jonathan D. and Noël, Brice and Fettweis, Xavier and Rennermalm, Åsa K. and Mote, Thomas L.},
+	month = mar,
+	year = {2023},
+	pages = {1743},
+}
+
+@article{maclennan_climatology_2023,
+	title = {Climatology and surface impacts of atmospheric rivers on {West} {Antarctica}},
+	volume = {17},
+	url = {https://tc.copernicus.org/articles/17/865/2023/},
+	doi = {10.5194/tc-17-865-2023},
+	number = {2},
+	journal = {The Cryosphere},
+	author = {Maclennan, M. L. and Lenaerts, J. T. M. and Shields, C. A. and Hoffman, A. O. and Wever, N. and Thompson-Munson, M. and Winters, A. C. and Pettit, E. C. and Scambos, T. A. and Wille, J. D.},
+	year = {2023},
+	pages = {865--881},
+}
+
+@article{simon_spatiotemporal_2023,
+	title = {Spatiotemporal variability of extreme precipitation events and associated atmospheric processes over {Dronning} {Maud} {Land}, {East} {Antarctica}},
+	url = {https://doi.org/10.22541%2Fessoar.168121508.85938968%2Fv1},
+	doi = {10.22541/essoar.168121508.85938968/v1},
+	author = {Simon, Sibin and Turner, John and Thamban, Meloth and Wille, Jonathan and Deb, Pranab},
+	month = apr,
+	year = {2023},
+	note = {Publisher: Authorea, Inc.},
+}
+
+@techreport{gorodetskaya_compound_2023,
+	type = {preprint},
+	title = {Compound drivers behind new record high temperatures and surface melt at the {Antarctic} {Peninsula} in {February} 2022},
+	url = {https://www.researchsquare.com/article/rs-2544063/v1},
+	abstract = {Abstract
+          The Antarctic Peninsula (AP) experienced a new extreme warm event and record high surface melt in February 2022, rivaling the recent temperature records from 2015 and 2020, and contributing to an alarming series of extreme warm events there. The northern/northwestern AP was directly impacted by an intense atmospheric river (AR) bringing anomalous heat and rainfall, while AR-enhanced foehn effect further warmed its northeastern side. The event was triggered by multiple large-scale atmospheric circulation patterns linking the AR formation to tropical convection anomalies and stationary Rossby waves, with anomalous Amundsen Sea low and record-breaking blocking high. The cascade of impacts culminated in widespread and intensive surface melt across the AP. The event was statistically attributed to global warming. Increasing frequency of such events can undermine the stability of the AP ice shelves, with multiple local to global impacts, including acceleration of the AP ice mass loss and changes in sensitive ecosystems.},
+	urldate = {2023-06-06},
+	institution = {In Review},
+	author = {Gorodetskaya, Irina and Durán-Alarcón, Claudio and Gonzalez-Herrero, Sergi and Clem, Kyle and Imazio, Paola Rodriguez and Santos, Christophe Leroy-Dos and Campos, Diego and Zou, Xun and Dutrievoz, Niels and Rowe, Penny and Wille, Jonathan and Favier, Vincent and Blanchet, Juliette and Chyhareva, Anastasiia and Cordero, Raul and Park, Sang-Jong and Colwell, Steve and Lazzara, Matthew and Carrasco, Jorge and Gulisano, Adriana and Krakovska, Svitlana and Ralph, F. Martin and Pohl, Benjamin},
+	month = mar,
+	year = {2023},
+	doi = {10.21203/rs.3.rs-2544063/v1},
+	file = {Submitted Version:/Users/jwille/Zotero/storage/JX7L4CVM/Gorodetskaya et al. - 2023 - Compound drivers behind new record high temperatur.pdf:application/pdf},
+}
+
+@article{zou_strong_2022,
+	title = {Strong {Warming} over the {Antarctic} {Peninsula} during {Combined} {Atmospheric} {River} and {Foehn} {Events}: {Contribution} of {Shortwave} {Radiation} and {Turbulence}},
+	url = {https://doi.org/10.1002%2Fessoar.10512808.1},
+	doi = {10.1002/essoar.10512808.1},
+	author = {Zou, Xun and Rowe, Penny Marie and Gorodetskaya, Irina and Bromwich, David H. and Lazzara, Matthew and Cordero, Raul R. and Zhang, Zhenhai and Kawzenuk, Brian and Cordeira, Jason M. and Wille, Jonathan D. and Ralph, F. Martin and Bai, Le-sheng},
+	month = nov,
+	year = {2022},
+	note = {Publisher: Wiley},
+}
+
+@article{pohl_atmospheric_2022,
+	title = {Atmospheric {Rivers} and {Weather} {Types} in {Aotearoa} {New} {Zealand}: a two-way story},
+	url = {https://doi.org/10.1002%2Fessoar.10511503.1},
+	doi = {10.1002/essoar.10511503.1},
+	author = {Pohl, Benjamin and Prince, Hamish D. and Wille, Jonathan D. and Kingston, Daniel G. and Cullen, Nicolas J. and Fauchereau, Nicolas C.},
+	month = jun,
+	year = {2022},
+	note = {Publisher: Wiley},
+}
+
+@article{shields_evaluating_2022,
+	title = {Evaluating {Uncertainty} and {Modes} of {Variability} for {Antarctic} {Atmospheric} {Rivers}},
+	url = {https://doi.org/10.1002%2Fessoar.10511445.1},
+	doi = {10.1002/essoar.10511445.1},
+	author = {Shields, Christine A. and Wille, Jonathan D. and Collow, Allison B. Marquardt and Maclennan, Michelle Laura and Gorodetskaya, Irina},
+	month = may,
+	year = {2022},
+	note = {Publisher: Wiley},
 }
