--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,4 +1,5 @@
-
+---
+---
 @article{donat-magnin_interannual_2020,
 	title = {Interannual variability of summer surface mass balance and surface melting in the {Amundsen} sector, {West} {Antarctica}},
 	volume = {14},
@@ -315,7 +316,7 @@ Publisher: American Meteorological Society},
 	month = mar,
 	year = {2023},
 	doi = {10.21203/rs.3.rs-2544063/v1},
-	file = {Submitted Version:/Users/jwille/Zotero/storage/JX7L4CVM/Gorodetskaya et al. - 2023 - Compound drivers behind new record high temperatur.pdf:application/pdf},
+	file = {Submitted Version:files/992/Gorodetskaya et al. - 2023 - Compound drivers behind new record high temperatur.pdf:application/pdf},
 }
 
 @article{zou_strong_2022,
